--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   get_it: ^7.7.0
   syncfusion_flutter_calendar: ^28.1.41
   loading_animation_widget: ^1.2.1
+  timezone: ^0.10.0
 
 dev_dependencies:
   flutter_test:
